https links plz

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <h2>focusing on all layers of web development</h2>
       <h3>Nov. 14-15, 2015</h3>
       <h3>Toronto, Canada</h3>
-      <h4><a href="http://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
+      <h4><a href="https://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
     </div>
   </div>
 </section>
@@ -84,7 +84,7 @@ layout: default
     </div>
     <div class="row">
       <div class="center">
-        <h4><a href="http://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
+        <h4><a href="https://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
       </div>
     </div>
   </div>
