--- a/schedule/index.html
+++ b/schedule/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container center">
     <h2>Schedule</h2>
     <h3>Nov. 14-15, 2015</h3>
-    <h4><a href="http://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
+    <h4><a href="https://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
   </div>
 </section>
 <section id="schedule-content">
