--- a/speakers/index.html
+++ b/speakers/index.html
@@ -7,7 +7,7 @@ layout: default
     <div class="row">
       <h2>Speakers</h2>
       <h3>Nov. 14-15, 2015</h3>
-      <h4><a href="http://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
+      <h4><a href="https://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
     </div>
   </div>
 </section>
@@ -24,7 +24,7 @@ layout: default
         <div class="row">
       {% endif %}
         <article class="speaker col-md-6">
-          <img src="http://s3.amazonaws.com/eventmobi-assets/eventsbyids/9565/people/{{ speaker.image100 }}" alt="{{ speaker.first_name }} Headshot"/>
+          <img src="https://s3.amazonaws.com/eventmobi-assets/eventsbyids/9565/people/{{ speaker.image100 }}" alt="{{ speaker.first_name }} Headshot"/>
           <h3 id="{{this.name.first}}-{{this.name.last}}">{{ speaker.first_name }}</h3>
           {% if speaker.title %}
             <h4 class="code">{{ speaker.title }}</h4>
