lanyard doesn't work over https?

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -32,7 +32,7 @@ layout: default
 "use strict"
 $(function(){
   var getSessions = function(){
-    $.ajax("http://lanyrd.com/2015/fstoconf/schedule/110c8d3d435de071.v1.json", {
+    $.ajax("https://lanyrd.com/2015/fstoconf/schedule/110c8d3d435de071.v1.json", {
       type: "GET",
       dataType: "JSONP",
       success: function(data){
