Updating sponsors andding volunteer link

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -13,7 +13,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-      <p>To help you  get the most  out of #fstoconf15, we've put together a content schedule to show you what types of talks you can expect. The schedule of course is not set in stone, with  topics and times likely to change multiple times before the conference  in order to deliver the best schedule.</p>
+      <p>We've put together an awesome schedule for you, we know you won't be able to make it to everything so we will be recording all of the talks. Everyone who buys a ticket will get access to all the videos once they are processed! In the meantime head over to our <a href="http://eventmobi.com/fstoconf15">mobile app</a> and plan out your conference experience! </p>
     </div>
     </div>
     <div class="saturday">
