--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -96,7 +96,7 @@ layout: default
           <li>Recognition on social media channels</li>
           <li>Logo and link on 2015 event website (Co-Branded)</li>
           <li>Passes to #fstoconf15</li>
-          <li>Opportunities Available: 0 </li>
+          <li>Opportunities Left: 0 </li>
         </ul>
       </div>
       <div class="col-md-6">
@@ -112,7 +112,7 @@ layout: default
           <li>Recognition on social media channels</li>
           <li>Logo and link on 2015 event website (Size 2)</li>
           <li>Passes to #fstoconf15</li>
-          <li>Opportunities Available: 4 </li>
+          <li>Opportunities Left: 4 </li>
         </ul>
       </div>
     </div>
@@ -129,7 +129,7 @@ layout: default
           <li>Recognition on social media channels</li>
           <li>Logo and link on 2015 event website (Size 3)</li>
           <li>Passes to #fstoconf15</li>
-          <li>Opportunities Available: 5 </li>
+          <li>Opportunities Left: 2 </li>
         </ul>
       </div>
       <div class="col-md-6">
@@ -141,7 +141,7 @@ layout: default
           <li>Announcement of Sponsorship on social media channels</li>
           <li>Logo and link on 2015 event website (Size 4)</li>
           <li>Passes to #fstoconf15</li>
-          <li>Opportunities Available: 10 </li>
+          <li>Opportunities Left: 9 </li>
         </ul>
       </div>
     </div>
@@ -152,15 +152,7 @@ layout: default
           <li>Announcement of Sponsorship on social media channels</li>
           <li>Logo and link on 2015 event website (Size 5)</li>
           <li>Passes to #fstoconf15</li>
-          <li>Opportunities Available: 15 </li>
-        </ul>
-      </div>
-      <div class="col-md-6">
-        <h3>&lt;$500 - Friend</h3>
-        <ul>
-          <li>Name with Link on 2015 Event Website</li>
-          <li>Pass to #fstoconf15</li>
-          <li>Opportunities Available: Unlimited </li>
+          <li>Opportunities Left: 9 </li>
         </ul>
       </div>
     </div>
