landing poage update

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ layout: default
       <h1>#fstoconf15</h1>
       <h2>focusing on all layers of web development</h2>
       <h3>Nov. 14-15, 2015</h3>
-      <h3>Toronto, Canada</h3>
-      <h4><a href="https://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Buy Tickets!</a></h4>
+      <h3>Ryerson Engineering Bldg.,</h3>
+      <h3>245 Church St., Toronto, Canada</h3>
+      <h4><a href="https://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Register Today!</a></h4>
     </div>
   </div>
 </section>
