--- a/speak/index.html
+++ b/speak/index.html
@@ -94,21 +94,7 @@ layout: default
       <p>Each talk will be given a 60 minutes time slot, we expect you to use 45 minutes on your presentation and 15 minutes on Q&amp;A. You will be required to submit your slides the Friday before the event November 13th so that we can distribute them after the event. Your talk may be recorded and livestreamed so please make sure you use the provided microphone regardless if you think you’re loud enough. By speaking at #fstoconf15 you consent to being recorded and grant us a non-revocable license to use and redistribute the recording as we see fit and use it in marketing materials. You remain the sole copyright holder of your presentation, we will not claim your presentation as our own and will always provide credit.</p>
     </div>
     <div class="row col-md-12">
-      <h2>Key Dates</h2>
-      <ul>
-        <li>Submissions Open - Now</li>
-        <li>Submissions Close - Oct 9</li>
-        <li>Speakers Alerted - Oct 13 (However we will review and work with all submissions up until this date)</li>
-        <li>Speaker Acceptance Needed - Oct 16</li>
-        <li>Speakers Announced - Oct 19 (Or as approved)</li>
-        <li>Speaker Slides Due - Nov 13</li>
-        <li>Speaking Nov 14/15</li>
-      </ul>
-    </div>
-    <div class="row col-md-12">
-      <h2>Submit a Talk</h2>
-      <p>Ready to submit? Make sure you have read and agree to the <a href="/code-of-conduct">code of conduct</a> and fill out the following form. As a speaker you will have full access to the conference free of charge and will receive a small honorarium and/or appreciation event. You will however NOT be compensated for your time or expenses. Speaking at Full Stack Toronto events is a volunteer position, we appreciate your expertise and would like to compensate speakers in the future, but we are still a young non-profit that needs more growth before we can increase our expenses. We have also found those who speak out of passion for their craft instead of for a pay cheque connect better with our attendees. Speakers coming internationally will receive a letter to assist with any Visa needs.</p>
-      <iframe src="https://docs.google.com/forms/d/1K52pI6YBOVb-IZFqvNMQvmdTC-gtwik3Pg9fgHjK7PA/viewform?embedded=true" width="760" height="1600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <h2>Submissions are now closed</h2>
     </div>
   </div>
 </section>
