--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
       <h3>Nov. 14-15, 2015</h3>
       <h3>Ryerson Engineering Bldg.,</h3>
       <h3>245 Church St., Toronto, Canada</h3>
-      <h4><a href="https://fstoconf15.eventbrite.ca" class="btn btn-success btn-lg">Register Today!</a></h4>
+      <h4><a href="#" class="btn btn-success btn-lg">SOLD OUT!</a></h4>
     </div>
   </div>
 </section>
