--- a/schedule/index.html
+++ b/schedule/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container center">
     <h2>Schedule</h2>
     <h3>Nov. 14-15, 2015</h3>
-    <h4><a href="#" class="btn btn-success btn-lg">SOLD OUT!</a></h4>
+    <h4><a href="https://www.eventbrite.ca/e/full-stack-torontos-fstoconf15-presented-by-telus-tickets-15670397581" class="btn btn-success btn-lg">Limited Tickets Left Buy Now!</a></h4>
   </div>
 </section>
 <section id="schedule-content">
@@ -30,6 +30,10 @@ layout: default
 </section>
 <script>
 "use strict"
+if (window.location.protocol != "https:") {
+   window.location.protocol = "http:";
+   window.location.reload();
+}
 $(function(){
   var getSessions = function(){
     $.ajax("http://lanyrd.com/2015/fstoconf/schedule/110c8d3d435de071.v1.json", {
