no https schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,7 +30,7 @@ layout: default
 </section>
 <script>
 "use strict"
-if (window.location.protocol != "https:") {
+if (window.location.protocol != "http:") {
    window.location.protocol = "http:";
    window.location.reload();
 }
