no https schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,6 +30,9 @@ layout: default
 </section>
 <script>
 "use strict"
+if (window.location.protocol != "http:")
+    window.location.href = "http:" + window.location.href.substring(window.location.protocol.length);
+}
 $(function(){
   var getSessions = function(){
     $.ajax("http://lanyrd.com/2015/fstoconf/schedule/110c8d3d435de071.v1.json", {
