--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,8 +30,8 @@ layout: default
 </section>
 <script>
 "use strict"
-if (window.location.protocol != "http:")
-    window.location.href = "http:" + window.location.href.substring(window.location.protocol.length);
+if (window.location.protocol != "http:") {
+  window.location.href = "http:" + window.location.href.substring(window.location.protocol.length);
 }
 $(function(){
   var getSessions = function(){
