--- a/schedule/index.html
+++ b/schedule/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Schedule
 ---
 
-<section id="schedule" class="sub-header blue-poly">
+<section id="schedule" class="sub-header multi-poly">
   <div class="container center">
     <h2>Schedule</h2>
     <h3>Nov. 14-15, 2015</h3>
