--- a/speak/index.html
+++ b/speak/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Speak at #fstoconf15
 ---
 
-<section class="sub-header blue-poly">
+<section class="sub-header multi-poly">
     <h2>Speak at #fstoconf15</h2>
 </section>
 <section>
