--- a/speakers/index.html
+++ b/speakers/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Speakers
 ---
 
-<section id="masthead-sm" class="sub-header red-poly">
+<section id="masthead-sm" class="sub-header multi-poly">
   <div class="container">
     <div class="row">
       <h2>Speakers</h2>
