--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<section class="purple-poly sub-header">
+<section class="multi-poly sub-header">
   <div class="container">
     <h2>Sponsor Us</h2>
   </div>
