--- a/schedule/index.html
+++ b/schedule/index.html
@@ -7,7 +7,7 @@ title: Schedule
   <div class="container center">
     <h2>Schedule</h2>
     <h3>Nov. 14-15, 2015</h3>
-    <h4><a href="https://www.eventbrite.ca/e/full-stack-torontos-fstoconf15-presented-by-telus-tickets-15670397581" class="btn btn-success btn-lg">Limited Tickets Left Buy Now!</a></h4>
+    <h4><a href="http://fstoconf15-videos.fsto.co" class="btn btn-success btn-lg">Pre-Order The Videos!</a></h4>
   </div>
 </section>
 <section id="schedule-content">
