--- a/tv/index.html
+++ b/tv/index.html
@@ -31,8 +31,9 @@
     <body>
         <div class="left-frame">
           <!-- BEGIN TWEETWALL EMBED -->
-<div class="tweetwall"><script src="//fstoconf15.tweetwall.com/js/embed.js?header=false&layout=1&bgcolor=%23efefef&border=false&width=1220px&height=1080px" class="tweetwall-script" async></script><noscript><a href="http://fstoconf15.tweetwall.com/" target="_blank">View the Tweetwall</a></noscript><div style="position:absolute; z-index:1000; text-indent: -9999px;"><a href="http://tweetwall.com/twitter-widget">Moderated Twitter Widget</a> by Tweetwall</div></div>
+<div class="tweetwall"><script src="//fstoconf15.tweetwall.com/js/embed.js?header=true&layout=1&bgcolor=transparent&border=false&width=100%&height=1080px" class="tweetwall-script" async></script><noscript><a href="http://fstoconf15.tweetwall.com/" target="_blank">View the Tweetwall</a></noscript><div style="position:absolute; z-index:1000; text-indent: -9999px;"><a href="http://tweetwall.com/twitter-widget">Moderated Twitter Widget</a> by Tweetwall</div></div>
 <!-- END TWEETWALL EMBED -->
+
 
         </div>
         <div class="right-frame">
