--- a/tv/index.html
+++ b/tv/index.html
@@ -30,9 +30,7 @@
     </head>
     <body>
         <div class="left-frame">
-          <!-- BEGIN TWEETWALL EMBED -->
-<div class="tweetwall"><script src="//fstoconf15.tweetwall.com/js/embed.js?header=true&layout=1&bgcolor=transparent&border=false&width=100%&height=1080px" class="tweetwall-script" async></script><noscript><a href="http://fstoconf15.tweetwall.com/" target="_blank">View the Tweetwall</a></noscript><div style="position:absolute; z-index:1000; text-indent: -9999px;"><a href="http://tweetwall.com/twitter-widget">Moderated Twitter Widget</a> by Tweetwall</div></div>
-<!-- END TWEETWALL EMBED -->
+<iframe src="http://fstoconf15.tweetwall.com/" style="border:0px #FFFFFF none;" name="tweetwall" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="1080px" width="1200px"></iframe>
 
 
         </div>
