--- a/tv/index.html
+++ b/tv/index.html
@@ -33,6 +33,7 @@
           left: 870px;
           overflow-x: hidden;
           padding: 10px;
+          height: 1040px;
 
         }
         .map-frame{
