--- a/tv/index.html
+++ b/tv/index.html
@@ -48,6 +48,9 @@
           overflow: scroll;
           height: 1040px;
         }
+        ::-webkit-scrollbar { 
+            display: none; 
+        }
         </style>
     </head>
     <body>
