--- a/speak/index.html
+++ b/speak/index.html
@@ -7,77 +7,77 @@ title: Speak
 		<div class="row">
 			<div class="col-sm-12">
 				<h2>Our Style</h2>
-				<p>Are you ready for the challeng of speaking at Canada's most practical web professionals confernce? Yes? Good let's get started!</p>
-				<p>Speaking at Full Stack Toronso events is a unique experince. We ask for content that fits into our hybrid session model, free of commercial content, and relevant to current best practices and future ready!</p>
+				<p>Are you ready for the challenge of speaking at Canada's most practical web professionals conference? Yes? Good! let's get started!</p>
+				<p>Speaking at Full Stack Toronto events is a unique experience. We ask for content that fits into our hybrid session model, free of commercial content, relevant to current best practices and future ready!</p>
 
 				<h2>Hybrid Session Model</h2>
-				<p>To meet the hybid session model your talk must adhere to the following:<p>
+				<p>To meet the hybrid session model your talk must adhere to the following:<p>
 				<ul>
-					<li>Be 30 minutes in lenght</li>
+					<li>Be 30 minutes in length</li>
 					<li>Followed by 10 minutes of Q&amp;A</li>
 					<li>Overview of a web concept</li>
 					<li>A deep dive into a part of that concept like a demo, code, or case study</li>
 					<li>Give attendees practical takeaways</li>
 					<li>Follow our Code of Conduct</li>
-					<li>Free of commercial content, no indepts of paid products or servicies, no promoting your employeer</li>
+					<li>Free of commercial content, no in-depths of paid products or services, no promoting your employer</li>
 				</ul>
 
 				<h2>What you get</h2>
-				<p>All speakers at #fstoco will be paid a base honouraium of $1000CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. Reimbursment will only happen if you book through our travel and lodging partners, some exceptions will be made for those that can't book with our partners. You must provide all recipts within 30 days of the end of the event to be reimbursed.</p>
-				<p>We are commited to increasing the diversity of our event and all tech events are offer a 10% bonus to the base compensation for those coming from typically underrepresented demographics.</p>
+				<p>All speakers at #fstoco will be paid a base honorarium of $1000CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. Reimbursement will only happen if you book through our travel and lodging partners, while some few exceptions can be made for those unable to book with them. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
+				<p>We are fully invested in increasing the diversity at our events, we grant a 10% bonus over the base compensation to every speaker coming from typically underrepresented demographics.</p>
 				<h3>Pay Structure</h3>
 				<ul>
 					<li>Regional (Within Regular GO-Transit Service)
 						<ul>
-							<li>Base Honourarium - $1000</li>
-							<li>Diversity Bonus - $100</li>
-							<li>Travel Assitance - Max $120</li>
-							<li>Lodging Assitance - None</li>
+							<li>Base honorarium - $1000</li>
+							<li>Diversity bonus - $100</li>
+							<li>Travel assistance - Max $120</li>
+							<li>Lodging assistance - None</li>
 						</ul>
 					</li>
-					<li>Ontario &amp; Quebec
+					<li>Ontario &amp; Qu&eacute;bec
 						<ul>
-							<li>Base Honourarium - $1000</li>
-							<li>Diversity Bonus - $100</li>
-							<li>Travel Assitance - Max $375</li>
-							<li>Lodging Assitance(3 nights) - Max $550</li>
+							<li>Base honorarium - $1000</li>
+							<li>Diversity bonus - $100</li>
+							<li>Travel assistance - Max $375</li>
+							<li>Lodging assistance (3 nights) - Max $550</li>
 						</ul>
 					</li>
 					<li>Rest of Canada
 						<ul>
-							<li>Base Honourarium - $1000</li>
-							<li>Diversity Bonus - $100</li>
-							<li>Travel Assitance - Max $900</li>
-							<li>Lodging Assitance(3 nights) - Max $550</li>
+							<li>Base honorarium - $1000</li>
+							<li>Diversity bonus - $100</li>
+							<li>Travel assistance - Max $900</li>
+							<li>Lodging assistance (3 nights) - Max $550</li>
 						</ul>
 					</li>
 					<li>The Americas
 						<ul>
-							<li>Base Honourarium - $1000</li>
-							<li>Diversity Bonus - $100</li>
-							<li>Travel Assitance - Max $1000</li>
-							<li>Lodging Assitance(3 nights) - Max $550</li>
+							<li>Base honorarium - $1000</li>
+							<li>Diversity bonus - $100</li>
+							<li>Travel assistance - Max $1000</li>
+							<li>Lodging assistance (3 nights) - Max $550</li>
 						</ul>
 					</li>
 					<li>Afro-EurAsia
 						<ul>
-							<li>Base Honourarium - $1000</li>
-							<li>Diversity Bonus - $100</li>
-							<li>Travel Assitance - Max $1500</li>
-							<li>Lodging Assitance(4 nights) - Max $700</li>
+							<li>Base honorarium - $1000</li>
+							<li>Diversity bonus - $100</li>
+							<li>Travel assistance - Max $1500</li>
+							<li>Lodging assistance (4 nights) - Max $700</li>
 						</ul>
 					</li>
 					<li>AustralAsia
 						<ul>
-							<li>Base Honourarium - $1000</li>
+							<li>Base honorarium - $1000</li>
 							<li>Diversity Bonus - $100</li>
-							<li>Travel Assitance - Max $2500</li>
-							<li>Lodging Assitance(5 nights) - Max $850</li>
+							<li>Travel assistance - Max $2500</li>
+							<li>Lodging assistance (5 nights) - Max $850</li>
 						</ul>
 					</li>
 				</ul>
 				<h2>Ready to submit?</h2>
-				<p>Please fill in this google form the best you can, the more information the better!</p>
+				<p>Please fill in this google form the best you can, the more information the better!</p><!-- in the form, discipline or specialty should be added to concentration. It's less local-specific -->
 				<iframe src="https://docs.google.com/forms/d/1DM49r_YeBtoPBqLWnPw34DE8JREIJyvlx58ggNyh3YU/viewform?embedded=true" width="760" height="2750" frameborder="0">Loading...</iframe>
 			</div>
 		</div>
