--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ title: Home
 				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX and visual designs, project management, and product development.</p>
 			</div>
 			<div class="col-md-3">
-				Marketing image for watch 2015 videos
+				<h2>&nbsp;</h2>
+				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" /><img src="/static/images/watch-img.png" alt="Watch 2014 Videos" class="img-responsive wow tada" /></a></p>
+				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" />Watch the videos</a> from the 2015 conference to get a taste before you buy!</a>
 			</div>
 		</div>
 	</div>
@@ -18,16 +20,19 @@ title: Home
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-4">
+			<div class="col-sm-12 col-md-4 paper">
+				<i class="fa fa-4x fa-users wow bounceIn"></i>
 				<h2>Who Should Attend</h2>
 				<p>If you work in the web industry #fstoco is for you! Every year, we bring together the world's brightest minds in the business to present on relevant topics with real-life applications. You will go back to work not only knowing how to do the latest and greatest, but most importantly the why.</p>
 			</div>
-			<div class="col-sm-12 col-md-4">
+			<div class="col-sm-12 col-md-4 paper">
+				<i class="fa fa-4x fa-hand-spock-o wow bounceIn"></i>
 				<h2>Why You Should Attend</h2>
 				<p>We believe that to become a better professional, you need to understand what the other members of your team are doing. We've planned our content schedule so that you can participate in your concentration/discipline or learn from others to further your career growth.</p>
 			</div>
-			<div class="col-sm-12 col-md-4">
-			<h2>Who's Attending</h2>
+			<div class="col-sm-12 col-md-4 paper">
+				<i class="fa fa-4x fa-user-secret wow bounceIn"></i>
+				<h2>Who's Attending</h2>
 				<p>Content is king. We strongly believe in NOT selling you our event based on any given speakers or their affiliations (i.e. Google, Microsoft, etc. - but to be frank, these people do actually tend to speak at our events). We are devoted to providing you unbiased, good content first. Check out the <a href="/schedule">schedule</a> we have planned for you</p>
 			</div>
 		</div>
@@ -69,12 +74,14 @@ title: Home
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3">
-				Marketing image here of download sponsorship document
+				<h2>&nbsp;</h2>
+				<p><a href="/static/fstoco-sponsorship.pdf"><img src="/static/images/sponsor-deck.png" alt="Download the 2016 Sponsorship Deck" class="img-responsive wow tada" /></a></p>
+				<p>Download the <a href="/static/fstoco-sponsorship.pdf">2016 Sponsorship Deck</a> and get your name out there today!</p>
 			</div>
 			<div class="col-sm-12 col-md-8">
 				<h2>Help Us</h2>
 				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing lunch and a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
-			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found on the <a href="/sponsor">sponsors</a> page.</p> 
+			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="/static/fstoco-sponsorship.pdf">sponsorship deck</a></p> 
 				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? Signup to be a volunteer!</p>
 			</div>
 		</div>
