--- a/speak/index.html
+++ b/speak/index.html
@@ -2,14 +2,22 @@
 layout: default
 title: Speak
 ---
-<section>
+<section class="bg-primary">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-sm-12 col-md-8">
 				<h2>Our Style</h2>
 				<p>Are you ready for the challenge of speaking at Canada's most practical web professionals conference? Yes? Good! let's get started!</p>
 				<p>Speaking at Full Stack Toronto events is a unique experience. We ask for content that fits into our hybrid session model, free of commercial content, relevant to current best practices and future ready!</p>
+			</div>
+		</div>
+	</div>
+</section>
 
+<section>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 col-md-6">
 				<h2>Hybrid Session Model</h2>
 				<p>To meet the hybrid session model your talk must adhere to the following:<p>
 				<ul>
@@ -21,64 +29,78 @@ title: Speak
 					<li>Follow our Code of Conduct</li>
 					<li>Free of commercial content, no in-depths of paid products or services, no promoting your employer</li>
 				</ul>
-
+			</div>
+			<div class="col-sm-12 col-md-6">
 				<h2>What you get</h2>
 				<p>All speakers at #fstoco will be paid a base honorarium of $1000CAD, we will then reimburse you for travel and lodging expenses in Canadian Dollars up to a certain amount based on your geographical region. Reimbursement will only happen if you book through our travel and lodging partners, while some few exceptions can be made for those unable to book with them. You must provide all receipts within 30 days of the end of the event in order to be reimbursed.</p>
 				<p>We are fully invested in increasing the diversity at our events, we grant a 10% bonus over the base compensation to every speaker coming from typically underrepresented demographics.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
 				<h3>Pay Structure</h3>
+				<p>Here is an outline of how we plan to pay our speakers. Do note that reimbursment for travel and lodging will only be made availble to those who book with our partners. If your company has a no-payment policy or would pay your way for us, which gives us more funds to put towards and awesome event, we will offer them a free logo spot in our partners section. These numbers are subject to change without notice and do not act as a contract.</p>
+			</div>
+			<div class="col-md-2">
+				<h4>Regional (GTHA)</h4>
 				<ul>
-					<li>Regional (Within Regular GO-Transit Service)
-						<ul>
-							<li>Base honorarium - $1000</li>
-							<li>Diversity bonus - $100</li>
-							<li>Travel assistance - Max $120</li>
-							<li>Lodging assistance - None</li>
-						</ul>
-					</li>
-					<li>Ontario &amp; Qu&eacute;bec
-						<ul>
-							<li>Base honorarium - $1000</li>
-							<li>Diversity bonus - $100</li>
-							<li>Travel assistance - Max $375</li>
-							<li>Lodging assistance (3 nights) - Max $550</li>
-						</ul>
-					</li>
-					<li>Rest of Canada
-						<ul>
-							<li>Base honorarium - $1000</li>
-							<li>Diversity bonus - $100</li>
-							<li>Travel assistance - Max $900</li>
-							<li>Lodging assistance (3 nights) - Max $550</li>
-						</ul>
-					</li>
-					<li>The Americas
-						<ul>
-							<li>Base honorarium - $1000</li>
-							<li>Diversity bonus - $100</li>
-							<li>Travel assistance - Max $1000</li>
-							<li>Lodging assistance (3 nights) - Max $550</li>
-						</ul>
-					</li>
-					<li>Afro-EurAsia
-						<ul>
-							<li>Base honorarium - $1000</li>
-							<li>Diversity bonus - $100</li>
-							<li>Travel assistance - Max $1500</li>
-							<li>Lodging assistance (4 nights) - Max $700</li>
-						</ul>
-					</li>
-					<li>AustralAsia
-						<ul>
-							<li>Base honorarium - $1000</li>
-							<li>Diversity Bonus - $100</li>
-							<li>Travel assistance - Max $2500</li>
-							<li>Lodging assistance (5 nights) - Max $850</li>
-						</ul>
-					</li>
+					<li>Base - $500</li>
+					<li>Diversity bonus - $50</li>
+					<li>Travel assistance - Max $120</li>
+					<li>Lodging assistance - None</li>
 				</ul>
+			</div>
+			<div class="col-md-2">
+				<h4>Ontario &amp; Qu&eacute;bec</h4>
+				<ul>
+					<li>Base - $500</li>
+					<li>Diversity bonus - $50</li>
+					<li>Travel assistance - Max $300</li>
+					<li>Lodging assistance (2 nights) - Max $600</li>
+				</ul>
+			</div>
+			<div class="col-md-2">
+				<h4>Rest of Canada</h4>
+				<ul>
+					<li>Base - $500</li>
+					<li>Diversity bonus - $50</li>
+					<li>Travel assistance - Max $800</li>
+					<li>Lodging assistance (2 nights) - Max $600</li>
+				</ul>
+			</div>
+			<div class="col-md-2">
+				<h4>The Americas</h4>
+				<ul>
+					<li>Base - $500</li>
+					<li>Diversity bonus - $50</li>
+					<li>Travel assistance - Max $1100</li>
+					<li>Lodging assistance (3 nights) - Max $900</li>
+				</ul>
+			</div>
+			<div class="col-md-2">
+				<h4>Afro-EurAsia</h4>
+				<ul>
+					<li>Base - $500</li>
+					<li>Diversity bonus - $50</li>
+					<li>Travel assistance - Max $1500</li>
+					<li>Lodging assistance (3 nights) - Max $900</li>
+				</ul>
+			</div>
+			<div class="col-md-2">
+				<h4>AustralAsia</h4>
+				<ul>
+					<li>Base - $500</li>
+					<li>Diversity Bonus - $50</li>
+					<li>Travel assistance - Max $2500</li>
+					<li>Lodging assistance (4 nights) - Max $1200</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
 				<h2>Ready to submit?</h2>
 				<p>Please fill in this google form the best you can, the more information the better!</p><!-- in the form, discipline or specialty should be added to concentration. It's less local-specific -->
-				<iframe src="https://docs.google.com/forms/d/1DM49r_YeBtoPBqLWnPw34DE8JREIJyvlx58ggNyh3YU/viewform?embedded=true" width="760" height="2750" frameborder="0">Loading...</iframe>
+				<iframe src="https://docs.google.com/forms/d/1DM49r_YeBtoPBqLWnPw34DE8JREIJyvlx58ggNyh3YU/viewform?embedded=true" width="760" height="4000" frameborder="0">Loading...</iframe>
 			</div>
 		</div>
 	</div>
