--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-<section class="bg-primary">
+<section class="intro">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-8">
